Fixing link to project on GitHub

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -6,7 +6,7 @@
 <body>
 	<div class="container">
 		<h1>React Codemirror</h1>
-		<h2><a href="http://JedWatson.github.io/react-codemirror/">View project on GitHub</a></h2>
+		<h2><a href="http://github.com/JedWatson/react-codemirror">View project on GitHub</a></h2>
 		<!-- the example app is rendered into this div -->
 		<div id="app"></div>
 		<div class="hint">
